fix collapse

--- a/ra5-collapse/src/components/Collapse/collapse.css
+++ b/ra5-collapse/src/components/Collapse/collapse.css
@@ -30,6 +30,6 @@
 }
 
 .collapse-content.open {
-  max-height: 500px;
+  max-height: 200px;
   opacity: 1;
 }
